--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -94,8 +94,8 @@
 
         {% if site.email %}
         <br>
-        <a style="margin: 0 5px 0 0" href="{{ site.email}}">
-          <i class="fa-solid fa-envelope"></i>  {{site.email}}
+        <a style="margin: 0 5px 0 0">
+          <i class="fa-solid fa-envelope"></i>    <email>{{site.email}}</email>
         </a>  
         {% endif %}
 
@@ -120,6 +120,7 @@
 
 
         <div class="social-icons">
+        <!--https://www.w3schools.com/icons/fontawesome5_icons_brands.asp-->
         {% if site.google_scholar %}
         <a style="margin: 0 5px 0 0" href="{{ site.google_scholar }}">
           <i class="ai ai-google-scholar" style="font-size:1.2rem"></i>
@@ -132,11 +133,21 @@
         </a>
         {% endif %}
 
+
         {% if site.github_link %}
         <a style="margin: 0 5px 0 0" href="{{ site.github_link }}">
           <i class="fab fa-github"></i>
         </a>
         {% endif %}
+
+        {% if site.instagram_link %}
+        <a style="margin: 0 5px 0 0" href="{{ site.instagram_link }}">
+          <i class="fab fa-instagram"></i>
+        </a>
+        {% endif %}
+
+
+
 
         {% if site.linkedin %}
         <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
